Use Lombok to initialize controllers