@@ -1,6 +1,6 @@
 package org.schoellerfamily.gedbrowser.api.controller;
 
-import java.util.Collections;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -10,8 +10,8 @@ import org.schoellerfamily.gedbrowser.api.controller.exception.DataSetNotFoundEx
 import org.schoellerfamily.gedbrowser.datamodel.Root;
 import org.schoellerfamily.gedbrowser.persistence.domain.RootDocument;
 import org.schoellerfamily.gedbrowser.persistence.mongo.loader.GedDocumentFileLoader;
+import org.schoellerfamily.gedbrowser.persistence.mongo.repository.RepositoryManagerMongo;
 import org.schoellerfamily.gedbrowser.writer.GedWriter;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -22,6 +22,8 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.ResponseBody;
 
+import lombok.RequiredArgsConstructor;
+
 /**
  * Emits GEDCOM to the HTTP connection to download the GEDCOM state.
  *
@@ -30,13 +32,15 @@ import org.springframework.web.bind.annotation.ResponseBody;
 @CrossOrigin(origins = {
         "http://largo.schoellerfamily.org:4200", "http://localhost:4200" })
 @Controller
+@RequiredArgsConstructor
 public class SaveController {
     /** Logger. */
     private final transient Log logger = LogFactory.getLog(getClass());
 
     /** */
-    @Autowired
-    private transient GedDocumentFileLoader loader;
+    private final GedDocumentFileLoader loader;
+
+    private final RepositoryManagerMongo repositoryManager;
 
     /**
      * Connects HTML template file with data for saving the GEDCOM file.
@@ -59,8 +63,7 @@ public class SaveController {
             final String filename = db + ".ged";
             logger.info("filename: " + filename);
             final HttpHeaders headers = new HttpHeaders();
-            headers.setAccessControlExposeHeaders(
-                    Collections.singletonList("Content-Disposition"));
+            headers.setAccessControlExposeHeaders(List.of("Content-Disposition"));
             headers.set(
                     "Content-Disposition", "attachment; filename=" + filename);
             headers.setContentType(MediaType.TEXT_PLAIN);
@@ -80,7 +83,7 @@ public class SaveController {
      * @return the root object
      */
     protected final Root fetchRoot(final String dbName) {
-        final RootDocument rootDocument = loader.loadDocument(dbName);
+        final RootDocument rootDocument = loader.loadDocument(repositoryManager, dbName);
         if (rootDocument == null) {
             throw new DataSetNotFoundException(
                     "Data set " + dbName + " not found", dbName);
